reference/5.1/Microsoft.PowerShell.Management/Copy-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,командлет
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/copy-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Copy-ItemProperty
ms.openlocfilehash: 7af5a414a84bad8048c997803c94c0d94e549989
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 07/07/2020
ms.locfileid: "93228434"
---
# <span data-ttu-id="91fec-103">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="91fec-103">Copy-ItemProperty</span></span>

## <span data-ttu-id="91fec-104">Краткий обзор</span><span class="sxs-lookup"><span data-stu-id="91fec-104">SYNOPSIS</span></span>

<span data-ttu-id="91fec-105">Копирует свойство и его значение из одного указанного расположения в другое.</span><span class="sxs-lookup"><span data-stu-id="91fec-105">Copies a property and value from a specified location to another location.</span></span>

## <span data-ttu-id="91fec-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="91fec-106">SYNTAX</span></span>

### <span data-ttu-id="91fec-107">Путь (по умолчанию)</span><span class="sxs-lookup"><span data-stu-id="91fec-107">Path (Default)</span></span>

```
Copy-ItemProperty [-Path] <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="91fec-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="91fec-108">LiteralPath</span></span>

```
Copy-ItemProperty -LiteralPath <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="91fec-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="91fec-109">DESCRIPTION</span></span>

<span data-ttu-id="91fec-110">`Copy-ItemProperty`Командлет копирует свойство и значение из указанного расположения в другое расположение.</span><span class="sxs-lookup"><span data-stu-id="91fec-110">The `Copy-ItemProperty` cmdlet copies a property and value from a specified location to another location.</span></span>
<span data-ttu-id="91fec-111">Например, с помощью этого командлета можно скопировать одну или несколько записей реестра из одного раздела реестра в другой раздел реестра.</span><span class="sxs-lookup"><span data-stu-id="91fec-111">For instance, you can use this cmdlet to copy one or more registry entries from one registry key to another registry key.</span></span>

## <span data-ttu-id="91fec-112">Примеры</span><span class="sxs-lookup"><span data-stu-id="91fec-112">EXAMPLES</span></span>

### <span data-ttu-id="91fec-113">Пример 1. копирование свойства из раздела реестра в другой раздел реестра</span><span class="sxs-lookup"><span data-stu-id="91fec-113">Example 1: Copy a property from a registry key to another registry key</span></span>

<span data-ttu-id="91fec-114">Эта команда копирует свойство с именем MyProperty из раздела реестра "MyApplication" в раздел реестра "MyApplicationRev2".</span><span class="sxs-lookup"><span data-stu-id="91fec-114">This command copies the property named "MyProperty" from the "MyApplication" registry key to the "MyApplicationRev2" registry key.</span></span>

```powershell
Copy-ItemProperty -Path "MyApplication" -Destination "HKLM:\Software\MyApplicationRev2" -Name "MyProperty"
```

## <span data-ttu-id="91fec-115">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="91fec-115">PARAMETERS</span></span>

### <span data-ttu-id="91fec-116">-Credential</span><span class="sxs-lookup"><span data-stu-id="91fec-116">-Credential</span></span>

<span data-ttu-id="91fec-117">Указывает учетную запись пользователя с разрешением на выполнение этого действия.</span><span class="sxs-lookup"><span data-stu-id="91fec-117">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="91fec-118">По умолчанию используется текущий пользователь.</span><span class="sxs-lookup"><span data-stu-id="91fec-118">The default is the current user.</span></span>

<span data-ttu-id="91fec-119">Введите имя пользователя, например "User01" или "Domain01\User01", или введите объект **PSCredential** , например, созданный `Get-Credential` командлетом.</span><span class="sxs-lookup"><span data-stu-id="91fec-119">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="91fec-120">Если ввести имя пользователя, будет предложено ввести пароль.</span><span class="sxs-lookup"><span data-stu-id="91fec-120">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="91fec-121">Этот параметр не поддерживается поставщиками, которые устанавливаются вместе с Windows PowerShell.</span><span class="sxs-lookup"><span data-stu-id="91fec-121">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-122">-Destination</span><span class="sxs-lookup"><span data-stu-id="91fec-122">-Destination</span></span>

<span data-ttu-id="91fec-123">Указывает путь к папке назначения.</span><span class="sxs-lookup"><span data-stu-id="91fec-123">Specifies the path to the destination location.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-124">-Exclude</span><span class="sxs-lookup"><span data-stu-id="91fec-124">-Exclude</span></span>

<span data-ttu-id="91fec-125">Указывает элемент или элементы, исключаемые этим командлетом, в виде массива строк.</span><span class="sxs-lookup"><span data-stu-id="91fec-125">Specifies, as a string array, an item or items that this cmdlet excludes.</span></span>
<span data-ttu-id="91fec-126">Значение этого параметра определяет параметр **Path** .</span><span class="sxs-lookup"><span data-stu-id="91fec-126">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="91fec-127">Введите путь к элементу или шаблон, например. «\*.txt».</span><span class="sxs-lookup"><span data-stu-id="91fec-127">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="91fec-128">Можно использовать подстановочные знаки.</span><span class="sxs-lookup"><span data-stu-id="91fec-128">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="91fec-129">-Filter</span><span class="sxs-lookup"><span data-stu-id="91fec-129">-Filter</span></span>

<span data-ttu-id="91fec-130">Задает фильтр в формате или на языке поставщика.</span><span class="sxs-lookup"><span data-stu-id="91fec-130">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="91fec-131">Значение этого параметра определяет параметр **Path** .</span><span class="sxs-lookup"><span data-stu-id="91fec-131">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="91fec-132">Синтаксис фильтра, включая использование подстановочных знаков, зависит от поставщика.</span><span class="sxs-lookup"><span data-stu-id="91fec-132">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="91fec-133">Фильтры более эффективны, чем другие параметры, так как поставщик применяет их, когда командлет получает объекты, а не использует фильтры PowerShell для объектов после их извлечения.</span><span class="sxs-lookup"><span data-stu-id="91fec-133">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="91fec-134">-Force</span><span class="sxs-lookup"><span data-stu-id="91fec-134">-Force</span></span>

<span data-ttu-id="91fec-135">Принудительное выполнение команды без запроса на подтверждение пользователем.</span><span class="sxs-lookup"><span data-stu-id="91fec-135">Forces the command to run without asking for user confirmation.</span></span>
<span data-ttu-id="91fec-136">Применение этого параметра зависит от конкретного поставщика.</span><span class="sxs-lookup"><span data-stu-id="91fec-136">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="91fec-137">Дополнительные сведения см. в разделе [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="91fec-137">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-138">-Include</span><span class="sxs-lookup"><span data-stu-id="91fec-138">-Include</span></span>

<span data-ttu-id="91fec-139">Указывает в виде массива строк элемент или элементы, которые этот командлет включает в операцию.</span><span class="sxs-lookup"><span data-stu-id="91fec-139">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="91fec-140">Значение этого параметра определяет параметр **Path** .</span><span class="sxs-lookup"><span data-stu-id="91fec-140">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="91fec-141">Введите путь к элементу или шаблон, например. «\*.txt».</span><span class="sxs-lookup"><span data-stu-id="91fec-141">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="91fec-142">Можно использовать подстановочные знаки.</span><span class="sxs-lookup"><span data-stu-id="91fec-142">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-143">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="91fec-143">-LiteralPath</span></span>

<span data-ttu-id="91fec-144">Указывает путь к текущему расположению свойства.</span><span class="sxs-lookup"><span data-stu-id="91fec-144">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="91fec-145">В отличие от параметра **Path** , значение **LiteralPath** используется именно так, как оно введено.</span><span class="sxs-lookup"><span data-stu-id="91fec-145">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="91fec-146">Никакие символы не интерпретируются как знаки подстановки.</span><span class="sxs-lookup"><span data-stu-id="91fec-146">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="91fec-147">Если путь содержит escape-символы, заключите его в одинарные кавычки.</span><span class="sxs-lookup"><span data-stu-id="91fec-147">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="91fec-148">Одинарные кавычки указывают PowerShell не интерпретировать какие-либо символы как escape-последовательности.</span><span class="sxs-lookup"><span data-stu-id="91fec-148">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-149">-Name</span><span class="sxs-lookup"><span data-stu-id="91fec-149">-Name</span></span>

<span data-ttu-id="91fec-150">Указывает имя свойства, которое нужно скопировать.</span><span class="sxs-lookup"><span data-stu-id="91fec-150">Specifies the name of the property to be copied.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-151">-PassThru</span><span class="sxs-lookup"><span data-stu-id="91fec-151">-PassThru</span></span>

<span data-ttu-id="91fec-152">Возвращает объект, представляющий элемент, с которым вы работаете.</span><span class="sxs-lookup"><span data-stu-id="91fec-152">Returns an object representing the item with which you are working.</span></span>
<span data-ttu-id="91fec-153">По умолчанию этот командлет не создает выходные данные.</span><span class="sxs-lookup"><span data-stu-id="91fec-153">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-154">-Path</span><span class="sxs-lookup"><span data-stu-id="91fec-154">-Path</span></span>

<span data-ttu-id="91fec-155">Указывает в виде массива строк путь к свойству, которое необходимо скопировать.</span><span class="sxs-lookup"><span data-stu-id="91fec-155">Specifies, as a string array, the path to the property to be copied.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-156">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="91fec-156">-UseTransaction</span></span>
<span data-ttu-id="91fec-157">Включает команду в активную транзакцию.</span><span class="sxs-lookup"><span data-stu-id="91fec-157">Includes the command in the active transaction.</span></span>
<span data-ttu-id="91fec-158">Этот параметр доступен только при выполнении транзакции.</span><span class="sxs-lookup"><span data-stu-id="91fec-158">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="91fec-159">Дополнительные сведения см. в разделе about_Transactions.</span><span class="sxs-lookup"><span data-stu-id="91fec-159">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-160">-Confirm</span><span class="sxs-lookup"><span data-stu-id="91fec-160">-Confirm</span></span>
<span data-ttu-id="91fec-161">Запрос подтверждения перед выполнением командлета.</span><span class="sxs-lookup"><span data-stu-id="91fec-161">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-162">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="91fec-162">-WhatIf</span></span>

<span data-ttu-id="91fec-163">Показывает, что произойдет при запуске командлета.</span><span class="sxs-lookup"><span data-stu-id="91fec-163">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="91fec-164">Командлет не выполняется.</span><span class="sxs-lookup"><span data-stu-id="91fec-164">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="91fec-165">Общие параметры</span><span class="sxs-lookup"><span data-stu-id="91fec-165">CommonParameters</span></span>

<span data-ttu-id="91fec-166">Этот командлет поддерживает общие параметры: `-Debug` , `-ErrorAction` , `-ErrorVariable` , `-InformationAction` , `-InformationVariable` , `-OutVariable` , `-OutBuffer` , `-PipelineVariable` , `-Verbose` , `-WarningAction` и `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="91fec-166">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="91fec-167">См. сведения в разделе [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="91fec-167">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="91fec-168">Входные данные</span><span class="sxs-lookup"><span data-stu-id="91fec-168">INPUTS</span></span>

### <span data-ttu-id="91fec-169">System.String</span><span class="sxs-lookup"><span data-stu-id="91fec-169">System.String</span></span>

<span data-ttu-id="91fec-170">В этот командлет можно передать по конвейеру строку, содержащую путь.</span><span class="sxs-lookup"><span data-stu-id="91fec-170">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="91fec-171">Выходные данные</span><span class="sxs-lookup"><span data-stu-id="91fec-171">OUTPUTS</span></span>

### <span data-ttu-id="91fec-172">Нет или System.Management.Automation.PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="91fec-172">None or System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="91fec-173">При использовании параметра **PassThru** этот командлет создает объект **PsCustomObject** , представляющий скопированное свойство Item.</span><span class="sxs-lookup"><span data-stu-id="91fec-173">When you use the **Passthru** parameter, this cmdlet generates a **PsCustomObject** representing the copied item property.</span></span>
<span data-ttu-id="91fec-174">В противном случае командлет не формирует никаких выходных данных.</span><span class="sxs-lookup"><span data-stu-id="91fec-174">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="91fec-175">ПРИМЕЧАНИЯ</span><span class="sxs-lookup"><span data-stu-id="91fec-175">NOTES</span></span>

<span data-ttu-id="91fec-176">Этот командлет предназначен для работы с данными, предоставляемыми любым поставщиком.</span><span class="sxs-lookup"><span data-stu-id="91fec-176">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="91fec-177">Чтобы вывести список поставщиков, доступных в данном сеансе, введите командлет `Get-PSProvider`.</span><span class="sxs-lookup"><span data-stu-id="91fec-177">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="91fec-178">Дополнительные сведения см. в разделе about_Providers.</span><span class="sxs-lookup"><span data-stu-id="91fec-178">For more information, see about_Providers.</span></span>

## <span data-ttu-id="91fec-179">Связанные ссылки</span><span class="sxs-lookup"><span data-stu-id="91fec-179">RELATED LINKS</span></span>

[<span data-ttu-id="91fec-180">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="91fec-180">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="91fec-181">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="91fec-181">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="91fec-182">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="91fec-182">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="91fec-183">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="91fec-183">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="91fec-184">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="91fec-184">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="91fec-185">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="91fec-185">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="91fec-186">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="91fec-186">Get-PSProvider</span></span>](Get-PSProvider.md)
